select item styling complete

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body{
 }
 
 header{
-	font-size: 1.3rem;
+	font-size: 1.5rem;
 }
 
 header, 
@@ -57,13 +57,15 @@ form button:hover{
 	margin: 0.5rem;
 	background: white;
 	color: black;
-	font-size: 1.3rem;
+	font-size: 1.5rem;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 	transition: all 0.5s ease;
 }
-
+.filter-todo {
+  padding: 1rem;
+}
 .todo li{
 	flex: 1;
 }
@@ -97,4 +99,45 @@ form button:hover{
 .fall{
 	transform: translateY(8rem) rotateZ(20deg);
 	opacity: 0;
+}
+
+
+
+select{
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	-ms-appearance: none;
+	appearance: none;
+	outline: 0;
+	box-shadow: none;
+	border: none !important;
+	background-image: none;
+}
+
+.select{
+	margin: 1rem;
+	position: relative;
+	overflow: hidden;
+}
+select{
+	color: #ff6f47;
+	font-family: "Poppins", sans-serif;
+	width: 12rem;
+	cursor: pointer;
+}
+.select::after {
+	content: "\25BC";
+	position: absolute;
+	top: 0;
+	right: 0;
+	padding: 1rem;
+	background: #ff6f47;
+	cursor: pointer;
+	pointer-events: none;
+	transition: all 0.3s ease;
+}
+
+.select:hover::after{
+	background: white;
+	color: #ff6f47;
 }
